--- a/po/fr.po
+++ b/po/fr.po
@@ -7,16 +7,68 @@ msgid ""
 msgstr ""
 "Project-Id-Version: slingshot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-05-28 20:01-0500\n"
-"PO-Revision-Date: 2015-05-26 22:50+0000\n"
-"Last-Translator: XIA <xia.lady.3d@gmail.com>\n"
+"POT-Creation-Date: 2015-06-03 20:59+0200\n"
+"PO-Revision-Date: 2015-08-19 07:41+0000\n"
+"Last-Translator: Badidzetai <badidzetai@gmail.com>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-05-30 05:10+0000\n"
-"X-Generator: Launchpad (build 17532)\n"
+"X-Launchpad-Export-Date: 2015-11-11 05:05+0000\n"
+"X-Generator: Launchpad (build 17843)\n"
 "Language: fr\n"
+
+#: ../src/Widgets/SearchView.vala:160
+msgid "Other"
+msgstr "Autre"
+
+#: ../src/Widgets/SearchView.vala:163
+msgid "Text"
+msgstr "Texte"
+
+#: ../src/Widgets/SearchView.vala:166
+msgid "Applications"
+msgstr "Applications"
+
+#: ../src/Widgets/SearchView.vala:169
+msgid "Files"
+msgstr "Fichiers"
+
+#: ../src/Widgets/SearchView.vala:172
+msgid "Actions"
+msgstr "Actions"
+
+#: ../src/Widgets/SearchView.vala:175
+msgid "Search"
+msgstr "Rechercher"
+
+#: ../src/Widgets/SearchView.vala:178
+msgid "Contacts"
+msgstr "Contacts"
+
+#: ../src/Widgets/SearchView.vala:181
+msgid "Internet"
+msgstr "Internet"
+
+#: ../src/Widgets/SearchView.vala:184
+msgid "Settings"
+msgstr ""
+
+#: ../src/Widgets/AppEntry.vala:195
+msgid "Remove from _Dock"
+msgstr "Retirer du _Dock"
+
+#: ../src/Widgets/AppEntry.vala:197
+msgid "Add to _Dock"
+msgstr "Ajouter au _Dock"
+
+#: ../src/Widgets/CategoryView.vala:27
+msgid "All Applications"
+msgstr "Toutes les applications"
+
+#: ../src/Widgets/CategoryView.vala:28
+msgid "Create a new Filter"
+msgstr "Créer un nouveau filtre"
 
 #: ../src/Backend/App.vala:108
 msgid "Run this command…"
@@ -34,53 +86,89 @@ msgstr "Vue par catégories"
 msgid "Search Apps"
 msgstr "Rechercher des applications"
 
-#: ../src/Widgets/CategoryView.vala:27
-msgid "All Applications"
-msgstr "Toutes les applications"
+#: ../lib/synapse-plugins/system-managment.vala:103
+msgid "Suspend"
+msgstr "Mettre en veille"
 
-#: ../src/Widgets/CategoryView.vala:28
-msgid "Create a new Filter"
-msgstr "Créer un nouveau filtre"
+#: ../lib/synapse-plugins/system-managment.vala:104
+msgid "Put your computer into suspend mode"
+msgstr "Mettre votre ordinateur en veille"
 
-#: ../src/Widgets/AppEntry.vala:195
-msgid "Remove from _Dock"
-msgstr "Retirer du _Dock"
+#: ../lib/synapse-plugins/system-managment.vala:203
+msgid "Hibernate"
+msgstr "Hiberner"
 
-#: ../src/Widgets/AppEntry.vala:197
-msgid "Add to _Dock"
-msgstr "Ajouter au _Dock"
+#: ../lib/synapse-plugins/system-managment.vala:204
+msgid "Put your computer into hibernation mode"
+msgstr "Mettre votre ordinateur en veille prolongée"
 
-#: ../src/Widgets/SearchView.vala:156
-msgid "Other"
-msgstr "Autre"
+#: ../lib/synapse-plugins/system-managment.vala:302
+msgid "Shut Down"
+msgstr "Éteindre"
 
-#: ../src/Widgets/SearchView.vala:159
-msgid "Text"
-msgstr "Texte"
+#: ../lib/synapse-plugins/system-managment.vala:303
+msgid "Turn your computer off"
+msgstr "Éteindre votre ordinateur"
 
-#: ../src/Widgets/SearchView.vala:162
-msgid "Applications"
-msgstr "Applications"
+#: ../lib/synapse-plugins/system-managment.vala:386
+msgid "Restart"
+msgstr "Redémarrer"
 
-#: ../src/Widgets/SearchView.vala:165
-msgid "Files"
-msgstr "Fichiers"
+#: ../lib/synapse-plugins/system-managment.vala:387
+msgid "Restart your computer"
+msgstr "Redémarrer votre ordinateur"
 
-#: ../src/Widgets/SearchView.vala:168
-msgid "Actions"
-msgstr "Actions"
+#: ../lib/synapse-plugins/system-managment.vala:471
+msgid "Suspend, hibernate, restart or shutdown your computer."
+msgstr "Mettre en veille, hiberner, redémarrer ou éteindre votre ordinateur."
 
-#: ../src/Widgets/SearchView.vala:171
-msgid "Search"
-msgstr "Rechercher"
+#: ../lib/synapse-plugins/system-managment.vala:476
+msgid "ConsoleKit wasn't found"
+msgstr ""
 
-#: ../src/Widgets/SearchView.vala:174
-msgid "Contacts"
-msgstr "Contacts"
+#: ../lib/synapse-plugins/desktop-file-plugin.vala:94
+msgid "Search for and run applications on your computer."
+msgstr "Rechercher et lancer des applications sur votre ordinateur."
 
-#: ../src/Widgets/SearchView.vala:177
-msgid "Internet"
-msgstr "Internet"
+#: ../lib/synapse-plugins/desktop-file-plugin.vala:283
+msgid "Open with %s"
+msgstr "Ouvrir avec %s"
+
+#: ../lib/synapse-plugins/desktop-file-plugin.vala:285
+msgid "Opens current selection using %s"
+msgstr "Ouvre la sélection en cours en utilisant %s"
+
+#: ../lib/synapse-plugins/command-plugin.vala:56
+msgid "Execute '%s'"
+msgstr "Exécuter '%s'"
+
+#: ../lib/synapse-plugins/command-plugin.vala:56
+msgid "Run command"
+msgstr "Exécuter la commande"
+
+#: ../lib/synapse-plugins/command-plugin.vala:77
+msgid "Find and execute arbitrary commands."
+msgstr "Trouver et exécuter des commandes arbitraires."
+
+#: ../lib/synapse-plugins/calculator-plugin.vala:63
+msgid "Calculator"
+msgstr "Calculatrice"
+
+#: ../lib/synapse-plugins/calculator-plugin.vala:64
+msgid "Calculate basic expressions."
+msgstr "Calculer des expressions de base."
+
+#: ../lib/synapse-plugins/calculator-plugin.vala:68
+msgid "bc is not installed"
+msgstr "bc n'est pas installé"
+
+#: ../lib/synapse-plugins/switchboard-plugin.vala:55
+msgid "Open %s settings"
+msgstr ""
+
+#: ../lib/synapse-plugins/switchboard-plugin.vala:71
+msgid "Find switchboard plugs and open them."
+msgstr ""
 
 #: ../lib/synapse-core/common-actions.vala:77
 msgid "Run"
@@ -121,79 +209,3 @@ msgstr "Copier dans le presse-papier"
 #: ../lib/synapse-core/common-actions.vala:294
 msgid "Copy selection to clipboard"
 msgstr "Copier la sélection vers le presse-papier"
-
-#: ../lib/synapse-plugins/desktop-file-plugin.vala:94
-msgid "Search for and run applications on your computer."
-msgstr "Rechercher et lancer des applications sur votre ordinateur."
-
-#: ../lib/synapse-plugins/desktop-file-plugin.vala:283
-msgid "Open with %s"
-msgstr "Ouvrir avec %s"
-
-#: ../lib/synapse-plugins/desktop-file-plugin.vala:285
-msgid "Opens current selection using %s"
-msgstr "Ouvre la sélection en cours en utilisant %s"
-
-#: ../lib/synapse-plugins/command-plugin.vala:56
-msgid "Execute '%s'"
-msgstr "Exécuter '%s'"
-
-#: ../lib/synapse-plugins/command-plugin.vala:56
-msgid "Run command"
-msgstr "Exécuter la commande"
-
-#: ../lib/synapse-plugins/command-plugin.vala:77
-msgid "Find and execute arbitrary commands."
-msgstr "Trouver et exécuter des commandes arbitraires."
-
-#: ../lib/synapse-plugins/calculator-plugin.vala:63
-msgid "Calculator"
-msgstr "Calculatrice"
-
-#: ../lib/synapse-plugins/calculator-plugin.vala:64
-msgid "Calculate basic expressions."
-msgstr "Calculer des expressions de base."
-
-#: ../lib/synapse-plugins/calculator-plugin.vala:68
-msgid "bc is not installed"
-msgstr "bc n'est pas installé"
-
-#: ../lib/synapse-plugins/system-managment.vala:103
-msgid "Suspend"
-msgstr ""
-
-#: ../lib/synapse-plugins/system-managment.vala:104
-msgid "Put your computer into suspend mode"
-msgstr ""
-
-#: ../lib/synapse-plugins/system-managment.vala:203
-msgid "Hibernate"
-msgstr ""
-
-#: ../lib/synapse-plugins/system-managment.vala:204
-msgid "Put your computer into hibernation mode"
-msgstr ""
-
-#: ../lib/synapse-plugins/system-managment.vala:302
-msgid "Shut Down"
-msgstr ""
-
-#: ../lib/synapse-plugins/system-managment.vala:303
-msgid "Turn your computer off"
-msgstr ""
-
-#: ../lib/synapse-plugins/system-managment.vala:386
-msgid "Restart"
-msgstr ""
-
-#: ../lib/synapse-plugins/system-managment.vala:387
-msgid "Restart your computer"
-msgstr ""
-
-#: ../lib/synapse-plugins/system-managment.vala:471
-msgid "Suspend, hibernate, restart or shutdown your computer."
-msgstr ""
-
-#: ../lib/synapse-plugins/system-managment.vala:476
-msgid "ConsoleKit wasn't found"
-msgstr ""
