--- a/po/ka.po
+++ b/po/ka.po
@@ -2,192 +2,204 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-05-28 20:01-0500\n"
-"PO-Revision-Date: 2014-10-16 06:24+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2015-06-03 20:59+0200\n"
+"PO-Revision-Date: 2015-11-16 18:03+0000\n"
+"Last-Translator: Beqa Arabuli <arabulibeqa@yahoo.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-05-30 05:10+0000\n"
-"X-Generator: Launchpad (build 17532)\n"
+"X-Launchpad-Export-Date: 2015-11-17 05:06+0000\n"
+"X-Generator: Launchpad (build 17847)\n"
 
-#: ../src/Backend/App.vala:108
-msgid "Run this command…"
-msgstr ""
+#: ../src/Widgets/SearchView.vala:160
+msgid "Other"
+msgstr "სხვა"
 
-#: ../src/SlingshotView.vala:169
-msgid "View as Grid"
-msgstr ""
+#: ../src/Widgets/SearchView.vala:163
+msgid "Text"
+msgstr "ტექსტი"
 
-#: ../src/SlingshotView.vala:173
-msgid "View by Category"
-msgstr ""
+#: ../src/Widgets/SearchView.vala:166
+msgid "Applications"
+msgstr "პროგრამები"
 
-#: ../src/SlingshotView.vala:182
-msgid "Search Apps"
-msgstr ""
+#: ../src/Widgets/SearchView.vala:169
+msgid "Files"
+msgstr "ფაილები"
 
-#: ../src/Widgets/CategoryView.vala:27
-msgid "All Applications"
-msgstr ""
+#: ../src/Widgets/SearchView.vala:172
+msgid "Actions"
+msgstr "მოქმედებები"
 
-#: ../src/Widgets/CategoryView.vala:28
-msgid "Create a new Filter"
-msgstr ""
+#: ../src/Widgets/SearchView.vala:175
+msgid "Search"
+msgstr "ძებნა"
+
+#: ../src/Widgets/SearchView.vala:178
+msgid "Contacts"
+msgstr "კონტაქტები"
+
+#: ../src/Widgets/SearchView.vala:181
+msgid "Internet"
+msgstr "ინტერნეტი"
+
+#: ../src/Widgets/SearchView.vala:184
+msgid "Settings"
+msgstr "პარამეტრები"
 
 #: ../src/Widgets/AppEntry.vala:195
 msgid "Remove from _Dock"
-msgstr ""
+msgstr "_დოკიდან წაშლა"
 
 #: ../src/Widgets/AppEntry.vala:197
 msgid "Add to _Dock"
-msgstr ""
+msgstr "_დოკზე დამატება"
 
-#: ../src/Widgets/SearchView.vala:156
-msgid "Other"
-msgstr ""
+#: ../src/Widgets/CategoryView.vala:27
+msgid "All Applications"
+msgstr "ყველა პროგრამა"
 
-#: ../src/Widgets/SearchView.vala:159
-msgid "Text"
-msgstr ""
+#: ../src/Widgets/CategoryView.vala:28
+msgid "Create a new Filter"
+msgstr "ახალი საქაღალდის შექმნა"
 
-#: ../src/Widgets/SearchView.vala:162
-msgid "Applications"
-msgstr ""
+#: ../src/Backend/App.vala:108
+msgid "Run this command…"
+msgstr "ამ ბრძანების გაშვება..."
 
-#: ../src/Widgets/SearchView.vala:165
-msgid "Files"
-msgstr ""
+#: ../src/SlingshotView.vala:169
+msgid "View as Grid"
+msgstr "ბადედ ჩვენება"
 
-#: ../src/Widgets/SearchView.vala:168
-msgid "Actions"
-msgstr ""
+#: ../src/SlingshotView.vala:173
+msgid "View by Category"
+msgstr "კატეგორიებად ჩვენება"
 
-#: ../src/Widgets/SearchView.vala:171
-msgid "Search"
-msgstr ""
-
-#: ../src/Widgets/SearchView.vala:174
-msgid "Contacts"
-msgstr ""
-
-#: ../src/Widgets/SearchView.vala:177
-msgid "Internet"
-msgstr ""
-
-#: ../lib/synapse-core/common-actions.vala:77
-msgid "Run"
-msgstr ""
-
-#: ../lib/synapse-core/common-actions.vala:78
-msgid "Run an application, action or script"
-msgstr ""
-
-#: ../lib/synapse-core/common-actions.vala:133
-msgid "Run in Terminal"
-msgstr ""
-
-#: ../lib/synapse-core/common-actions.vala:134
-msgid "Run application or command in terminal"
-msgstr ""
-
-#: ../lib/synapse-core/common-actions.vala:182
-msgid "Open"
-msgstr ""
-
-#: ../lib/synapse-core/common-actions.vala:183
-msgid "Open using default application"
-msgstr ""
-
-#: ../lib/synapse-core/common-actions.vala:252
-msgid "Open folder"
-msgstr ""
-
-#: ../lib/synapse-core/common-actions.vala:253
-msgid "Open folder containing this file"
-msgstr ""
-
-#: ../lib/synapse-core/common-actions.vala:293
-msgid "Copy to Clipboard"
-msgstr ""
-
-#: ../lib/synapse-core/common-actions.vala:294
-msgid "Copy selection to clipboard"
-msgstr ""
-
-#: ../lib/synapse-plugins/desktop-file-plugin.vala:94
-msgid "Search for and run applications on your computer."
-msgstr ""
-
-#: ../lib/synapse-plugins/desktop-file-plugin.vala:283
-msgid "Open with %s"
-msgstr ""
-
-#: ../lib/synapse-plugins/desktop-file-plugin.vala:285
-msgid "Opens current selection using %s"
-msgstr ""
-
-#: ../lib/synapse-plugins/command-plugin.vala:56
-msgid "Execute '%s'"
-msgstr ""
-
-#: ../lib/synapse-plugins/command-plugin.vala:56
-msgid "Run command"
-msgstr ""
-
-#: ../lib/synapse-plugins/command-plugin.vala:77
-msgid "Find and execute arbitrary commands."
-msgstr ""
-
-#: ../lib/synapse-plugins/calculator-plugin.vala:63
-msgid "Calculator"
-msgstr ""
-
-#: ../lib/synapse-plugins/calculator-plugin.vala:64
-msgid "Calculate basic expressions."
-msgstr ""
-
-#: ../lib/synapse-plugins/calculator-plugin.vala:68
-msgid "bc is not installed"
-msgstr ""
+#: ../src/SlingshotView.vala:182
+msgid "Search Apps"
+msgstr "აპების ძებნა"
 
 #: ../lib/synapse-plugins/system-managment.vala:103
 msgid "Suspend"
-msgstr ""
+msgstr "შეჩერება"
 
 #: ../lib/synapse-plugins/system-managment.vala:104
 msgid "Put your computer into suspend mode"
-msgstr ""
+msgstr "თქვენი კომპიტერის შეჩერების რეჟიმში გადაყვანა"
 
 #: ../lib/synapse-plugins/system-managment.vala:203
 msgid "Hibernate"
-msgstr ""
+msgstr "ძილის რეჟიმი"
 
 #: ../lib/synapse-plugins/system-managment.vala:204
 msgid "Put your computer into hibernation mode"
-msgstr ""
+msgstr "თქვენი კომპიუტერის ძილის რეჟიმში გადაყვანა"
 
 #: ../lib/synapse-plugins/system-managment.vala:302
 msgid "Shut Down"
-msgstr ""
+msgstr "გამორთვა"
 
 #: ../lib/synapse-plugins/system-managment.vala:303
 msgid "Turn your computer off"
-msgstr ""
+msgstr "თქვენი კომპიუტერის გამორთვა"
 
 #: ../lib/synapse-plugins/system-managment.vala:386
 msgid "Restart"
-msgstr ""
+msgstr "გადატვირთვა"
 
 #: ../lib/synapse-plugins/system-managment.vala:387
 msgid "Restart your computer"
-msgstr ""
+msgstr "თქვენი კომპიუტერის გადატვირთვა"
 
 #: ../lib/synapse-plugins/system-managment.vala:471
 msgid "Suspend, hibernate, restart or shutdown your computer."
-msgstr ""
+msgstr "შეაჩერეთ, დააძინეთ, გადატვირთეთ ან გამორთეთ თქვენი კომპიუტერი."
 
 #: ../lib/synapse-plugins/system-managment.vala:476
 msgid "ConsoleKit wasn't found"
-msgstr ""
+msgstr "ConsoleKit ვერ მოიძებნა"
+
+#: ../lib/synapse-plugins/desktop-file-plugin.vala:94
+msgid "Search for and run applications on your computer."
+msgstr "მოძებნეთ და გაუშვით თქვენს კომპიტერში არსებული პროგრამები"
+
+#: ../lib/synapse-plugins/desktop-file-plugin.vala:283
+msgid "Open with %s"
+msgstr "%s-ის მეშვეობით გახსნა"
+
+#: ../lib/synapse-plugins/desktop-file-plugin.vala:285
+msgid "Opens current selection using %s"
+msgstr "არჩეულის %s-ის მეშვეობით გახსნა"
+
+#: ../lib/synapse-plugins/command-plugin.vala:56
+msgid "Execute '%s'"
+msgstr "განხორციელდეს '%s'"
+
+#: ../lib/synapse-plugins/command-plugin.vala:56
+msgid "Run command"
+msgstr "ბრძანების გაშვება"
+
+#: ../lib/synapse-plugins/command-plugin.vala:77
+msgid "Find and execute arbitrary commands."
+msgstr "მოძებნეთ და გაუშვით პირობითი ბრძანებები."
+
+#: ../lib/synapse-plugins/calculator-plugin.vala:63
+msgid "Calculator"
+msgstr "კალკულატორი"
+
+#: ../lib/synapse-plugins/calculator-plugin.vala:64
+msgid "Calculate basic expressions."
+msgstr "მარტივი გამოსახულებების გამოთვლა."
+
+#: ../lib/synapse-plugins/calculator-plugin.vala:68
+msgid "bc is not installed"
+msgstr "bc არ არის დაყენებული."
+
+#: ../lib/synapse-plugins/switchboard-plugin.vala:55
+msgid "Open %s settings"
+msgstr "%s პარამეტრების გახსნა"
+
+#: ../lib/synapse-plugins/switchboard-plugin.vala:71
+msgid "Find switchboard plugs and open them."
+msgstr "მოძებნეთ კომუტატორის შტეფსელები და გახსენით ისინი"
+
+#: ../lib/synapse-core/common-actions.vala:77
+msgid "Run"
+msgstr "გაშვება"
+
+#: ../lib/synapse-core/common-actions.vala:78
+msgid "Run an application, action or script"
+msgstr "პროგრამის, მოქმედებისა ან სცენარის გაშვება"
+
+#: ../lib/synapse-core/common-actions.vala:133
+msgid "Run in Terminal"
+msgstr "გაშვება ტერმინალში"
+
+#: ../lib/synapse-core/common-actions.vala:134
+msgid "Run application or command in terminal"
+msgstr "პროგრამის ან ბრძანების ტერმინალში გაშვება"
+
+#: ../lib/synapse-core/common-actions.vala:182
+msgid "Open"
+msgstr "გახსნა"
+
+#: ../lib/synapse-core/common-actions.vala:183
+msgid "Open using default application"
+msgstr "ნაგულისხმები პროგრამით გახსნა"
+
+#: ../lib/synapse-core/common-actions.vala:252
+msgid "Open folder"
+msgstr "საქაღალდის გასხნა"
+
+#: ../lib/synapse-core/common-actions.vala:253
+msgid "Open folder containing this file"
+msgstr "ამ ფაილის მომცველი საქაღალდის გახსნა"
+
+#: ../lib/synapse-core/common-actions.vala:293
+msgid "Copy to Clipboard"
+msgstr "ბუფერში ჩასმა"
+
+#: ../lib/synapse-core/common-actions.vala:294
+msgid "Copy selection to clipboard"
+msgstr "მონიშნულის ბუფერში კოპირება"
