--- a/po/ru.po
+++ b/po/ru.po
@@ -7,19 +7,67 @@ msgid ""
 msgstr ""
 "Project-Id-Version: slingshot\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2015-05-28 20:01-0500\n"
-"PO-Revision-Date: 2015-07-05 08:00+0000\n"
-"Last-Translator: Ivan Infro <Unknown>\n"
+"POT-Creation-Date: 2015-06-03 20:59+0200\n"
+"PO-Revision-Date: 2015-10-25 16:10+0000\n"
+"Last-Translator: zEvilz <zevilz13@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-07-06 05:13+0000\n"
-"X-Generator: Launchpad (build 17597)\n"
+"X-Launchpad-Export-Date: 2015-11-11 05:05+0000\n"
+"X-Generator: Launchpad (build 17843)\n"
 
-#: ../lib/synapse-plugins/calculator-plugin.vala:63
-msgid "Calculator"
-msgstr "Калькулятор"
+#: ../src/Widgets/SearchView.vala:160
+msgid "Other"
+msgstr "Прочие"
+
+#: ../src/Widgets/SearchView.vala:163
+msgid "Text"
+msgstr "Текст"
+
+#: ../src/Widgets/SearchView.vala:166
+msgid "Applications"
+msgstr "Приложения"
+
+#: ../src/Widgets/SearchView.vala:169
+msgid "Files"
+msgstr "Файлы"
+
+#: ../src/Widgets/SearchView.vala:172
+msgid "Actions"
+msgstr "Действия"
+
+#: ../src/Widgets/SearchView.vala:175
+msgid "Search"
+msgstr "Поиск"
+
+#: ../src/Widgets/SearchView.vala:178
+msgid "Contacts"
+msgstr "Контакты"
+
+#: ../src/Widgets/SearchView.vala:181
+msgid "Internet"
+msgstr "Интернет"
+
+#: ../src/Widgets/SearchView.vala:184
+msgid "Settings"
+msgstr "Параметры"
+
+#: ../src/Widgets/AppEntry.vala:195
+msgid "Remove from _Dock"
+msgstr "Убрать из _док-панели"
+
+#: ../src/Widgets/AppEntry.vala:197
+msgid "Add to _Dock"
+msgstr "Добавить в _док-панель"
+
+#: ../src/Widgets/CategoryView.vala:27
+msgid "All Applications"
+msgstr "Все приложения"
+
+#: ../src/Widgets/CategoryView.vala:28
+msgid "Create a new Filter"
+msgstr "Создать новый фильтр"
 
 #: ../src/Backend/App.vala:108
 msgid "Run this command…"
@@ -37,93 +85,45 @@ msgstr "В виде категорий"
 msgid "Search Apps"
 msgstr "Поиск приложений"
 
-#: ../src/Widgets/CategoryView.vala:27
-msgid "All Applications"
-msgstr "Все приложения"
+#: ../lib/synapse-plugins/system-managment.vala:103
+msgid "Suspend"
+msgstr "Ждущий режим"
 
-#: ../src/Widgets/CategoryView.vala:28
-msgid "Create a new Filter"
-msgstr "Создать новый фильтр"
+#: ../lib/synapse-plugins/system-managment.vala:104
+msgid "Put your computer into suspend mode"
+msgstr "Перейти в режим ожидания"
 
-#: ../src/Widgets/AppEntry.vala:195
-msgid "Remove from _Dock"
-msgstr ""
+#: ../lib/synapse-plugins/system-managment.vala:203
+msgid "Hibernate"
+msgstr "Спящий режим"
 
-#: ../src/Widgets/AppEntry.vala:197
-msgid "Add to _Dock"
-msgstr ""
+#: ../lib/synapse-plugins/system-managment.vala:204
+msgid "Put your computer into hibernation mode"
+msgstr "Перейти в спящий режим"
 
-#: ../src/Widgets/SearchView.vala:156
-msgid "Other"
-msgstr "Прочие"
+#: ../lib/synapse-plugins/system-managment.vala:302
+msgid "Shut Down"
+msgstr "Выключить"
 
-#: ../src/Widgets/SearchView.vala:159
-msgid "Text"
-msgstr "Текст"
+#: ../lib/synapse-plugins/system-managment.vala:303
+msgid "Turn your computer off"
+msgstr "Выключить компьютер"
 
-#: ../src/Widgets/SearchView.vala:162
-msgid "Applications"
-msgstr "Приложения"
+#: ../lib/synapse-plugins/system-managment.vala:386
+msgid "Restart"
+msgstr "Перезагрузить"
 
-#: ../src/Widgets/SearchView.vala:165
-msgid "Files"
-msgstr "Файлы"
+#: ../lib/synapse-plugins/system-managment.vala:387
+msgid "Restart your computer"
+msgstr "Перезагрузить компьютер"
 
-#: ../src/Widgets/SearchView.vala:168
-msgid "Actions"
-msgstr "Действия"
+#: ../lib/synapse-plugins/system-managment.vala:471
+msgid "Suspend, hibernate, restart or shutdown your computer."
+msgstr "Приостановить, усыпить, перезагрузить или выключить компьютер"
 
-#: ../src/Widgets/SearchView.vala:171
-msgid "Search"
-msgstr "Поиск"
-
-#: ../src/Widgets/SearchView.vala:174
-msgid "Contacts"
-msgstr "Контакты"
-
-#: ../src/Widgets/SearchView.vala:177
-msgid "Internet"
-msgstr "Интернет"
-
-#: ../lib/synapse-core/common-actions.vala:77
-msgid "Run"
-msgstr "Выполнить"
-
-#: ../lib/synapse-core/common-actions.vala:78
-msgid "Run an application, action or script"
-msgstr "Выполнить приложение, действие или скрипт"
-
-#: ../lib/synapse-core/common-actions.vala:133
-msgid "Run in Terminal"
-msgstr "Запустить в терминале"
-
-#: ../lib/synapse-core/common-actions.vala:134
-msgid "Run application or command in terminal"
-msgstr "Запустить приложение или команду в терминале"
-
-#: ../lib/synapse-core/common-actions.vala:182
-msgid "Open"
-msgstr "Открыть"
-
-#: ../lib/synapse-core/common-actions.vala:183
-msgid "Open using default application"
-msgstr "Открыть в приложении по умолчанию"
-
-#: ../lib/synapse-core/common-actions.vala:252
-msgid "Open folder"
-msgstr "Открыть папку"
-
-#: ../lib/synapse-core/common-actions.vala:253
-msgid "Open folder containing this file"
-msgstr "Открыть папку этого файла"
-
-#: ../lib/synapse-core/common-actions.vala:293
-msgid "Copy to Clipboard"
-msgstr "Копировать"
-
-#: ../lib/synapse-core/common-actions.vala:294
-msgid "Copy selection to clipboard"
-msgstr "Копировать выделенное"
+#: ../lib/synapse-plugins/system-managment.vala:476
+msgid "ConsoleKit wasn't found"
+msgstr "Не найден ConsoleKit"
 
 #: ../lib/synapse-plugins/desktop-file-plugin.vala:94
 msgid "Search for and run applications on your computer."
@@ -149,6 +149,10 @@ msgstr "Выполнить команду"
 msgid "Find and execute arbitrary commands."
 msgstr "Найти и выполнить произвольную команду"
 
+#: ../lib/synapse-plugins/calculator-plugin.vala:63
+msgid "Calculator"
+msgstr "Калькулятор"
+
 #: ../lib/synapse-plugins/calculator-plugin.vala:64
 msgid "Calculate basic expressions."
 msgstr "Вычислить основные выражения."
@@ -157,42 +161,50 @@ msgstr "Вычислить основные выражения."
 msgid "bc is not installed"
 msgstr "bc не установлена"
 
-#: ../lib/synapse-plugins/system-managment.vala:103
-msgid "Suspend"
-msgstr ""
+#: ../lib/synapse-plugins/switchboard-plugin.vala:55
+msgid "Open %s settings"
+msgstr "Открыть настройки %s"
 
-#: ../lib/synapse-plugins/system-managment.vala:104
-msgid "Put your computer into suspend mode"
-msgstr ""
+#: ../lib/synapse-plugins/switchboard-plugin.vala:71
+msgid "Find switchboard plugs and open them."
+msgstr "Найти плагины Switchboard и открыть их."
 
-#: ../lib/synapse-plugins/system-managment.vala:203
-msgid "Hibernate"
-msgstr ""
+#: ../lib/synapse-core/common-actions.vala:77
+msgid "Run"
+msgstr "Выполнить"
 
-#: ../lib/synapse-plugins/system-managment.vala:204
-msgid "Put your computer into hibernation mode"
-msgstr ""
+#: ../lib/synapse-core/common-actions.vala:78
+msgid "Run an application, action or script"
+msgstr "Запустить приложение, действие или скрипт"
 
-#: ../lib/synapse-plugins/system-managment.vala:302
-msgid "Shut Down"
-msgstr ""
+#: ../lib/synapse-core/common-actions.vala:133
+msgid "Run in Terminal"
+msgstr "Запустить в терминале"
 
-#: ../lib/synapse-plugins/system-managment.vala:303
-msgid "Turn your computer off"
-msgstr ""
+#: ../lib/synapse-core/common-actions.vala:134
+msgid "Run application or command in terminal"
+msgstr "Запустить приложение или команду в терминале"
 
-#: ../lib/synapse-plugins/system-managment.vala:386
-msgid "Restart"
-msgstr ""
+#: ../lib/synapse-core/common-actions.vala:182
+msgid "Open"
+msgstr "Открыть"
 
-#: ../lib/synapse-plugins/system-managment.vala:387
-msgid "Restart your computer"
-msgstr ""
+#: ../lib/synapse-core/common-actions.vala:183
+msgid "Open using default application"
+msgstr "Открыть в приложении по умолчанию"
 
-#: ../lib/synapse-plugins/system-managment.vala:471
-msgid "Suspend, hibernate, restart or shutdown your computer."
-msgstr ""
+#: ../lib/synapse-core/common-actions.vala:252
+msgid "Open folder"
+msgstr "Открыть папку"
 
-#: ../lib/synapse-plugins/system-managment.vala:476
-msgid "ConsoleKit wasn't found"
-msgstr ""
+#: ../lib/synapse-core/common-actions.vala:253
+msgid "Open folder containing this file"
+msgstr "Открыть папку с этим файлом"
+
+#: ../lib/synapse-core/common-actions.vala:293
+msgid "Copy to Clipboard"
+msgstr "Копировать"
+
+#: ../lib/synapse-core/common-actions.vala:294
+msgid "Copy selection to clipboard"
+msgstr "Копировать выделенное"
