--- a/po/tr.po
+++ b/po/tr.po
@@ -7,15 +7,67 @@ msgid ""
 msgstr ""
 "Project-Id-Version: slingshot\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2015-05-28 20:01-0500\n"
-"PO-Revision-Date: 2015-05-18 17:08+0000\n"
-"Last-Translator: Okan Türay <okan.turay@gmail.com>\n"
+"POT-Creation-Date: 2015-06-03 20:59+0200\n"
+"PO-Revision-Date: 2015-10-19 11:20+0000\n"
+"Last-Translator: Ayhan Kuru <ayhankuru@yandex.com.tr>\n"
 "Language-Team: Turkish <tr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-05-30 05:11+0000\n"
-"X-Generator: Launchpad (build 17532)\n"
+"X-Launchpad-Export-Date: 2015-11-11 05:05+0000\n"
+"X-Generator: Launchpad (build 17843)\n"
+
+#: ../src/Widgets/SearchView.vala:160
+msgid "Other"
+msgstr "Diğer"
+
+#: ../src/Widgets/SearchView.vala:163
+msgid "Text"
+msgstr "Metin"
+
+#: ../src/Widgets/SearchView.vala:166
+msgid "Applications"
+msgstr "Uygulamalar"
+
+#: ../src/Widgets/SearchView.vala:169
+msgid "Files"
+msgstr "Dosyalar"
+
+#: ../src/Widgets/SearchView.vala:172
+msgid "Actions"
+msgstr "Eylemler"
+
+#: ../src/Widgets/SearchView.vala:175
+msgid "Search"
+msgstr "Ara"
+
+#: ../src/Widgets/SearchView.vala:178
+msgid "Contacts"
+msgstr "Kişiler"
+
+#: ../src/Widgets/SearchView.vala:181
+msgid "Internet"
+msgstr "İnternet"
+
+#: ../src/Widgets/SearchView.vala:184
+msgid "Settings"
+msgstr "Ayarlar"
+
+#: ../src/Widgets/AppEntry.vala:195
+msgid "Remove from _Dock"
+msgstr "_Rıhtım'dan kaldır"
+
+#: ../src/Widgets/AppEntry.vala:197
+msgid "Add to _Dock"
+msgstr "_Rıhtım'a ekle"
+
+#: ../src/Widgets/CategoryView.vala:27
+msgid "All Applications"
+msgstr "Tüm Uygulamalar"
+
+#: ../src/Widgets/CategoryView.vala:28
+msgid "Create a new Filter"
+msgstr "Yeni bir Filtre oluştur"
 
 #: ../src/Backend/App.vala:108
 msgid "Run this command…"
@@ -33,93 +85,45 @@ msgstr "Kategoriye göre görüntüle"
 msgid "Search Apps"
 msgstr "Uygulama Ara"
 
-#: ../src/Widgets/CategoryView.vala:27
-msgid "All Applications"
-msgstr "Tüm Uygulamalar"
+#: ../lib/synapse-plugins/system-managment.vala:103
+msgid "Suspend"
+msgstr "Askıya Al"
 
-#: ../src/Widgets/CategoryView.vala:28
-msgid "Create a new Filter"
-msgstr "Yeni bir Filtre oluştur"
+#: ../lib/synapse-plugins/system-managment.vala:104
+msgid "Put your computer into suspend mode"
+msgstr "Bilgisayarı Askıya Al"
 
-#: ../src/Widgets/AppEntry.vala:195
-msgid "Remove from _Dock"
-msgstr "_Rıhtım'dan kaldır"
+#: ../lib/synapse-plugins/system-managment.vala:203
+msgid "Hibernate"
+msgstr "Uyku Modu"
 
-#: ../src/Widgets/AppEntry.vala:197
-msgid "Add to _Dock"
-msgstr "_Rıhtım'a ekle"
+#: ../lib/synapse-plugins/system-managment.vala:204
+msgid "Put your computer into hibernation mode"
+msgstr "Bilgisayarı Uyku Moduna Al"
 
-#: ../src/Widgets/SearchView.vala:156
-msgid "Other"
-msgstr "Diğer"
+#: ../lib/synapse-plugins/system-managment.vala:302
+msgid "Shut Down"
+msgstr "Bilgisayarı Kapat"
 
-#: ../src/Widgets/SearchView.vala:159
-msgid "Text"
-msgstr "Metin"
+#: ../lib/synapse-plugins/system-managment.vala:303
+msgid "Turn your computer off"
+msgstr "Bilgisayarı Kapat"
 
-#: ../src/Widgets/SearchView.vala:162
-msgid "Applications"
-msgstr "Uygulamalar"
+#: ../lib/synapse-plugins/system-managment.vala:386
+msgid "Restart"
+msgstr "Yeniden Başlat"
 
-#: ../src/Widgets/SearchView.vala:165
-msgid "Files"
-msgstr "Dosyalar"
+#: ../lib/synapse-plugins/system-managment.vala:387
+msgid "Restart your computer"
+msgstr "Bilgisayarı yeniden başlat"
 
-#: ../src/Widgets/SearchView.vala:168
-msgid "Actions"
-msgstr "Eylemler"
+#: ../lib/synapse-plugins/system-managment.vala:471
+msgid "Suspend, hibernate, restart or shutdown your computer."
+msgstr "Bilgisayarı Askıya Al,Hazırda Beklet,Yeniden Başlat, yada Kapat"
 
-#: ../src/Widgets/SearchView.vala:171
-msgid "Search"
-msgstr "Ara"
-
-#: ../src/Widgets/SearchView.vala:174
-msgid "Contacts"
-msgstr "Kişiler"
-
-#: ../src/Widgets/SearchView.vala:177
-msgid "Internet"
-msgstr "İnternet"
-
-#: ../lib/synapse-core/common-actions.vala:77
-msgid "Run"
-msgstr "Çalıştır"
-
-#: ../lib/synapse-core/common-actions.vala:78
-msgid "Run an application, action or script"
-msgstr "Uygulama, eylem veya betik çalıştır"
-
-#: ../lib/synapse-core/common-actions.vala:133
-msgid "Run in Terminal"
-msgstr "Uçbirimde Çalıştır"
-
-#: ../lib/synapse-core/common-actions.vala:134
-msgid "Run application or command in terminal"
-msgstr "Uçbirimde uygulama veya komut çalıştır"
-
-#: ../lib/synapse-core/common-actions.vala:182
-msgid "Open"
-msgstr "Aç"
-
-#: ../lib/synapse-core/common-actions.vala:183
-msgid "Open using default application"
-msgstr "Varsayılan uygulama ile aç"
-
-#: ../lib/synapse-core/common-actions.vala:252
-msgid "Open folder"
-msgstr "Dizini aç"
-
-#: ../lib/synapse-core/common-actions.vala:253
-msgid "Open folder containing this file"
-msgstr "Bu dosyayı içeren dizini aç"
-
-#: ../lib/synapse-core/common-actions.vala:293
-msgid "Copy to Clipboard"
-msgstr "Panoya Kopyala"
-
-#: ../lib/synapse-core/common-actions.vala:294
-msgid "Copy selection to clipboard"
-msgstr "Seçimi panoya kopyala"
+#: ../lib/synapse-plugins/system-managment.vala:476
+msgid "ConsoleKit wasn't found"
+msgstr "ConsoleKit bulunamadı"
 
 #: ../lib/synapse-plugins/desktop-file-plugin.vala:94
 msgid "Search for and run applications on your computer."
@@ -127,7 +131,7 @@ msgstr "Bilgisayarınızdaki uygulamaları arayın ve çalıştırın."
 
 #: ../lib/synapse-plugins/desktop-file-plugin.vala:283
 msgid "Open with %s"
-msgstr "%s ile aç"
+msgstr "%s ile Aç"
 
 #: ../lib/synapse-plugins/desktop-file-plugin.vala:285
 msgid "Opens current selection using %s"
@@ -157,42 +161,50 @@ msgstr "Basit ifadeleri hesapla."
 msgid "bc is not installed"
 msgstr "bc kurulu değil"
 
-#: ../lib/synapse-plugins/system-managment.vala:103
-msgid "Suspend"
-msgstr ""
+#: ../lib/synapse-plugins/switchboard-plugin.vala:55
+msgid "Open %s settings"
+msgstr "%s Ayarlarını Aç"
 
-#: ../lib/synapse-plugins/system-managment.vala:104
-msgid "Put your computer into suspend mode"
-msgstr ""
+#: ../lib/synapse-plugins/switchboard-plugin.vala:71
+msgid "Find switchboard plugs and open them."
+msgstr "Switchboard eklentilerini bul ve hepsini aç"
 
-#: ../lib/synapse-plugins/system-managment.vala:203
-msgid "Hibernate"
-msgstr ""
+#: ../lib/synapse-core/common-actions.vala:77
+msgid "Run"
+msgstr "Çalıştır"
 
-#: ../lib/synapse-plugins/system-managment.vala:204
-msgid "Put your computer into hibernation mode"
-msgstr ""
+#: ../lib/synapse-core/common-actions.vala:78
+msgid "Run an application, action or script"
+msgstr "Uygulama, eylem veya betik çalıştır"
 
-#: ../lib/synapse-plugins/system-managment.vala:302
-msgid "Shut Down"
-msgstr ""
+#: ../lib/synapse-core/common-actions.vala:133
+msgid "Run in Terminal"
+msgstr "Terminalde Çalıştır"
 
-#: ../lib/synapse-plugins/system-managment.vala:303
-msgid "Turn your computer off"
-msgstr ""
+#: ../lib/synapse-core/common-actions.vala:134
+msgid "Run application or command in terminal"
+msgstr "Termialde uygulama veya komut çalıştır"
 
-#: ../lib/synapse-plugins/system-managment.vala:386
-msgid "Restart"
-msgstr ""
+#: ../lib/synapse-core/common-actions.vala:182
+msgid "Open"
+msgstr "Aç"
 
-#: ../lib/synapse-plugins/system-managment.vala:387
-msgid "Restart your computer"
-msgstr ""
+#: ../lib/synapse-core/common-actions.vala:183
+msgid "Open using default application"
+msgstr "Varsayılan uygulama ile aç"
 
-#: ../lib/synapse-plugins/system-managment.vala:471
-msgid "Suspend, hibernate, restart or shutdown your computer."
-msgstr ""
+#: ../lib/synapse-core/common-actions.vala:252
+msgid "Open folder"
+msgstr "Dizini aç"
 
-#: ../lib/synapse-plugins/system-managment.vala:476
-msgid "ConsoleKit wasn't found"
-msgstr ""
+#: ../lib/synapse-core/common-actions.vala:253
+msgid "Open folder containing this file"
+msgstr "Bu dosyayı içeren dizini aç"
+
+#: ../lib/synapse-core/common-actions.vala:293
+msgid "Copy to Clipboard"
+msgstr "Panoya Kopyala"
+
+#: ../lib/synapse-core/common-actions.vala:294
+msgid "Copy selection to clipboard"
+msgstr "Seçimi panoya kopyala"
