--- a/po/uk.po
+++ b/po/uk.po
@@ -7,15 +7,67 @@ msgid ""
 msgstr ""
 "Project-Id-Version: slingshot\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
-"POT-Creation-Date: 2015-05-28 20:01-0500\n"
-"PO-Revision-Date: 2015-03-21 20:51+0000\n"
+"POT-Creation-Date: 2015-06-03 20:59+0200\n"
+"PO-Revision-Date: 2015-09-24 08:35+0000\n"
 "Last-Translator: Bogdan Lisnenko <Unknown>\n"
 "Language-Team: Ukrainian <uk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2015-05-30 05:11+0000\n"
-"X-Generator: Launchpad (build 17532)\n"
+"X-Launchpad-Export-Date: 2015-11-11 05:05+0000\n"
+"X-Generator: Launchpad (build 17843)\n"
+
+#: ../src/Widgets/SearchView.vala:160
+msgid "Other"
+msgstr "Інший"
+
+#: ../src/Widgets/SearchView.vala:163
+msgid "Text"
+msgstr "Текст"
+
+#: ../src/Widgets/SearchView.vala:166
+msgid "Applications"
+msgstr "Додатки"
+
+#: ../src/Widgets/SearchView.vala:169
+msgid "Files"
+msgstr "Файли"
+
+#: ../src/Widgets/SearchView.vala:172
+msgid "Actions"
+msgstr "Дії"
+
+#: ../src/Widgets/SearchView.vala:175
+msgid "Search"
+msgstr "Пошук"
+
+#: ../src/Widgets/SearchView.vala:178
+msgid "Contacts"
+msgstr "Контакти"
+
+#: ../src/Widgets/SearchView.vala:181
+msgid "Internet"
+msgstr "Інтернет"
+
+#: ../src/Widgets/SearchView.vala:184
+msgid "Settings"
+msgstr "Налаштування"
+
+#: ../src/Widgets/AppEntry.vala:195
+msgid "Remove from _Dock"
+msgstr "Вилучити з _доку"
+
+#: ../src/Widgets/AppEntry.vala:197
+msgid "Add to _Dock"
+msgstr "Додати в _док"
+
+#: ../src/Widgets/CategoryView.vala:27
+msgid "All Applications"
+msgstr "Усі додатки"
+
+#: ../src/Widgets/CategoryView.vala:28
+msgid "Create a new Filter"
+msgstr "Створити новий фільтр"
 
 #: ../src/Backend/App.vala:108
 msgid "Run this command…"
@@ -31,55 +83,91 @@ msgstr "У вигляді категорій"
 
 #: ../src/SlingshotView.vala:182
 msgid "Search Apps"
-msgstr "Шукати застосунки"
+msgstr "Шукати додатки"
 
-#: ../src/Widgets/CategoryView.vala:27
-msgid "All Applications"
-msgstr "Усі застосунки"
+#: ../lib/synapse-plugins/system-managment.vala:103
+msgid "Suspend"
+msgstr "Призупинити"
 
-#: ../src/Widgets/CategoryView.vala:28
-msgid "Create a new Filter"
-msgstr "Створити новий фільтр"
+#: ../lib/synapse-plugins/system-managment.vala:104
+msgid "Put your computer into suspend mode"
+msgstr "Перевести комп’ютер в режим очікування"
 
-#: ../src/Widgets/AppEntry.vala:195
-msgid "Remove from _Dock"
-msgstr ""
+#: ../lib/synapse-plugins/system-managment.vala:203
+msgid "Hibernate"
+msgstr "Приспати"
 
-#: ../src/Widgets/AppEntry.vala:197
-msgid "Add to _Dock"
-msgstr ""
+#: ../lib/synapse-plugins/system-managment.vala:204
+msgid "Put your computer into hibernation mode"
+msgstr "Перевести комп’ютер в режим сну"
 
-#: ../src/Widgets/SearchView.vala:156
-msgid "Other"
-msgstr "Інший"
+#: ../lib/synapse-plugins/system-managment.vala:302
+msgid "Shut Down"
+msgstr "Вимкнути"
 
-#: ../src/Widgets/SearchView.vala:159
-msgid "Text"
-msgstr "Текст"
+#: ../lib/synapse-plugins/system-managment.vala:303
+msgid "Turn your computer off"
+msgstr "Вимкнути ваш комп’ютер"
 
-#: ../src/Widgets/SearchView.vala:162
-msgid "Applications"
-msgstr "Застосунки"
+#: ../lib/synapse-plugins/system-managment.vala:386
+msgid "Restart"
+msgstr "Перезавантажити"
 
-#: ../src/Widgets/SearchView.vala:165
-msgid "Files"
-msgstr "Файли"
+#: ../lib/synapse-plugins/system-managment.vala:387
+msgid "Restart your computer"
+msgstr "Перезавантажити ваш комп’ютер"
 
-#: ../src/Widgets/SearchView.vala:168
-msgid "Actions"
-msgstr "Дії"
+#: ../lib/synapse-plugins/system-managment.vala:471
+msgid "Suspend, hibernate, restart or shutdown your computer."
+msgstr "Призупинити, приспати, перезавантажити або вимкнути ваш комп’ютер"
 
-#: ../src/Widgets/SearchView.vala:171
-msgid "Search"
-msgstr "Пошук"
+#: ../lib/synapse-plugins/system-managment.vala:476
+msgid "ConsoleKit wasn't found"
+msgstr "ConsoleKit не знайдено"
 
-#: ../src/Widgets/SearchView.vala:174
-msgid "Contacts"
-msgstr "Контакти"
+#: ../lib/synapse-plugins/desktop-file-plugin.vala:94
+msgid "Search for and run applications on your computer."
+msgstr "Пошук та виконання додатків на вашому комп’ютері."
 
-#: ../src/Widgets/SearchView.vala:177
-msgid "Internet"
-msgstr "Інтернет"
+#: ../lib/synapse-plugins/desktop-file-plugin.vala:283
+msgid "Open with %s"
+msgstr "Відкрити за допомогою  %s"
+
+#: ../lib/synapse-plugins/desktop-file-plugin.vala:285
+msgid "Opens current selection using %s"
+msgstr "Відкриває поточне виділення в %s"
+
+#: ../lib/synapse-plugins/command-plugin.vala:56
+msgid "Execute '%s'"
+msgstr "Виконати '%s'"
+
+#: ../lib/synapse-plugins/command-plugin.vala:56
+msgid "Run command"
+msgstr "Виконати команду"
+
+#: ../lib/synapse-plugins/command-plugin.vala:77
+msgid "Find and execute arbitrary commands."
+msgstr "Пошук та виконання довільних команд."
+
+#: ../lib/synapse-plugins/calculator-plugin.vala:63
+msgid "Calculator"
+msgstr "Калькулятор"
+
+#: ../lib/synapse-plugins/calculator-plugin.vala:64
+msgid "Calculate basic expressions."
+msgstr "Обчислення простих виразів."
+
+#: ../lib/synapse-plugins/calculator-plugin.vala:68
+msgid "bc is not installed"
+msgstr "Додаток bc не встановлено."
+
+#: ../lib/synapse-plugins/switchboard-plugin.vala:55
+msgid "Open %s settings"
+msgstr "Відкрити %s налаштування"
+
+#: ../lib/synapse-plugins/switchboard-plugin.vala:71
+msgid "Find switchboard plugs and open them."
+msgstr "Знайти додатки системних налаштувань та вікрити їх"
 
 #: ../lib/synapse-core/common-actions.vala:77
 msgid "Run"
@@ -120,79 +208,3 @@ msgstr "Скопіювати до буфера обміну"
 #: ../lib/synapse-core/common-actions.vala:294
 msgid "Copy selection to clipboard"
 msgstr "Скопіювати виділене у буфер обміну"
-
-#: ../lib/synapse-plugins/desktop-file-plugin.vala:94
-msgid "Search for and run applications on your computer."
-msgstr "Пошук та виконання застосунків на вашому комп’ютері."
-
-#: ../lib/synapse-plugins/desktop-file-plugin.vala:283
-msgid "Open with %s"
-msgstr "Відкрити за допомогою  %s"
-
-#: ../lib/synapse-plugins/desktop-file-plugin.vala:285
-msgid "Opens current selection using %s"
-msgstr "Відкриває поточне виділення в %s"
-
-#: ../lib/synapse-plugins/command-plugin.vala:56
-msgid "Execute '%s'"
-msgstr "Виконати '%s'"
-
-#: ../lib/synapse-plugins/command-plugin.vala:56
-msgid "Run command"
-msgstr "Виконати команду"
-
-#: ../lib/synapse-plugins/command-plugin.vala:77
-msgid "Find and execute arbitrary commands."
-msgstr "Пошук та виконання довільних команд."
-
-#: ../lib/synapse-plugins/calculator-plugin.vala:63
-msgid "Calculator"
-msgstr "Калькулятор"
-
-#: ../lib/synapse-plugins/calculator-plugin.vala:64
-msgid "Calculate basic expressions."
-msgstr "Обчислення простих виразів."
-
-#: ../lib/synapse-plugins/calculator-plugin.vala:68
-msgid "bc is not installed"
-msgstr "Застосунок bc не встановлено."
-
-#: ../lib/synapse-plugins/system-managment.vala:103
-msgid "Suspend"
-msgstr ""
-
-#: ../lib/synapse-plugins/system-managment.vala:104
-msgid "Put your computer into suspend mode"
-msgstr ""
-
-#: ../lib/synapse-plugins/system-managment.vala:203
-msgid "Hibernate"
-msgstr ""
-
-#: ../lib/synapse-plugins/system-managment.vala:204
-msgid "Put your computer into hibernation mode"
-msgstr ""
-
-#: ../lib/synapse-plugins/system-managment.vala:302
-msgid "Shut Down"
-msgstr ""
-
-#: ../lib/synapse-plugins/system-managment.vala:303
-msgid "Turn your computer off"
-msgstr ""
-
-#: ../lib/synapse-plugins/system-managment.vala:386
-msgid "Restart"
-msgstr ""
-
-#: ../lib/synapse-plugins/system-managment.vala:387
-msgid "Restart your computer"
-msgstr ""
-
-#: ../lib/synapse-plugins/system-managment.vala:471
-msgid "Suspend, hibernate, restart or shutdown your computer."
-msgstr ""
-
-#: ../lib/synapse-plugins/system-managment.vala:476
-msgid "ConsoleKit wasn't found"
-msgstr ""
